--- a/src/app/components/dashboard/content/waiting-room/waiting-room.component.html
+++ b/src/app/components/dashboard/content/waiting-room/waiting-room.component.html
@@ -1,1 +1,6 @@
-<p>waiting-room works!</p>
+<div class="main-container">
+    <app-header></app-header>
+    <div class="body">
+
+    </div>
+</div>
