--- a/src/app/components/dashboard/content/waiting-room/waiting-room.component.html
+++ b/src/app/components/dashboard/content/waiting-room/waiting-room.component.html
@@ -1,6 +1,12 @@
 <div class="main-container">
     <app-header></app-header>
-    <div class="body">
+    <div class="body row">
+        <div class="col col-md-8">
 
+        </div>
+        <div class="col col-md-4">
+            <app-calendar></app-calendar>
+
+        </div>
     </div>
 </div>
