Appointments manager init

--- a/src/app/components/dashboard/content/waiting-room/waiting-room.component.html
+++ b/src/app/components/dashboard/content/waiting-room/waiting-room.component.html
@@ -2,7 +2,7 @@
     <app-header></app-header>
     <div class="body row">
         <div class="col col-md-8">
-
+            <app-appointments-manager></app-appointments-manager>
         </div>
         <div class="col col-md-4">
             <app-calendar></app-calendar>
