--- a/src/app/components/dashboard/content/waiting-room/appointments-manager/appointments-controller/appointments-controller.component.html
+++ b/src/app/components/dashboard/content/waiting-room/appointments-manager/appointments-controller/appointments-controller.component.html
@@ -1,1 +1,10 @@
-<p>appointments-controller works!</p>
+<div class="main-container">
+    <button class="secondary-button">
+
+        <i class="fa fa-plus"></i>
+        Nouvelle visit 
+    </button>
+    <button class="secondary-button right">
+        Patient Suivant <i class="fa fa-arrow-right"></i>
+    </button>
+</div>
