--- a/src/app/components/dashboard/content/waiting-room/appointments-manager/appointments-manager.component.html
+++ b/src/app/components/dashboard/content/waiting-room/appointments-manager/appointments-manager.component.html
@@ -1,1 +1,8 @@
-<p>appointments-manager works!</p>
+<div class="main-container">
+    <div class="header primary-radius">
+        <app-appointments-controller></app-appointments-controller>
+    </div>
+    <div class="body primary-radius">
+
+    </div>
+</div>
