--- a/src/styles.css
+++ b/src/styles.css
@@ -78,3 +78,20 @@ h5.card-title {
     color: #212121;
     margin-bottom: 26px;
 }
+
+.secondary-button {
+    border: none;
+    background: white;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.1);
+    padding: 4px 6px;
+    font-size: 12px;
+    outline: none;
+    font-weight: bold;
+    color: rgb(38, 94, 215);
+    transition-duration: 0.3s;
+}
+
+.secondary-button:hover {
+    background: rgb(38, 94, 215);
+    color: white;
+}
