WaitingRoom Design done!

--- a/src/app/components/dashboard/content/waiting-room/appointments-manager/appointments-controller/appointments-controller.component.html
+++ b/src/app/components/dashboard/content/waiting-room/appointments-manager/appointments-controller/appointments-controller.component.html
@@ -4,7 +4,7 @@
         <i class="fa fa-plus"></i>
         Nouvelle visit 
     </button>
-    <button class="secondary-button right">
+    <button class="secondary-button right" (click)="next()">
         Patient Suivant <i class="fa fa-arrow-right"></i>
     </button>
 </div>
