--- a/src/app/components/dashboard/content/waiting-room/appointments-manager/appointments-manager.component.html
+++ b/src/app/components/dashboard/content/waiting-room/appointments-manager/appointments-manager.component.html
@@ -1,14 +1,14 @@
 <div class="main-container">
     <div class="header primary-radius">
-        <app-appointments-controller></app-appointments-controller>
+        <app-appointments-controller (nextEvent)="next()"></app-appointments-controller>
     </div>
     <div class="body primary-radius">
         <div class="row">
             <div class="col col-md-6">
-                <app-patients-list [header]="'En attent'" [color]="'#00C853'"></app-patients-list>
+                <app-patients-list [header]="'visites d\'attente'" [color]="'rgb(254, 101, 85)'" [visits]="waitingVisits" [nextSubject]="nextSubject"></app-patients-list>
             </div>
             <div class="col col-md-6">
-                <app-patients-list [header]="'Done !'" [color]='"#FFB508"'></app-patients-list>
+                <app-patients-list [done]="true" [header]="'visites terminées'" [color]='"rgb(38, 94, 215)"' [visits]="visitsDone"></app-patients-list>
             </div>
         </div>
     </div>
