--- a/src/app/components/dashboard/content/waiting-room/appointments-manager/appointments-controller/appointments-controller.component.html
+++ b/src/app/components/dashboard/content/waiting-room/appointments-manager/appointments-controller/appointments-controller.component.html
@@ -1,6 +1,5 @@
 <div class="main-container">
-    <button class="secondary-button">
-
+    <button class="secondary-button" (click)="newVisit()">
         <i class="fa fa-plus"></i>
         Nouvelle visit 
     </button>
