--- a/src/app/components/global/pop-up-window/pop-up-window.component.html
+++ b/src/app/components/global/pop-up-window/pop-up-window.component.html
@@ -12,5 +12,6 @@
         <app-assistant-submitter *ngIf="windowPage =='assistant-submitter'" (closeEvent)="close()"></app-assistant-submitter>
         <app-yes-no-message *ngIf="windowPage =='yes-no-message'" (closeEvent)="close()"></app-yes-no-message>
         <app-medical-act-submitter *ngIf="windowPage =='medical-act-submitter'" (closeEvent)="close()"></app-medical-act-submitter>
+        <app-new-visit *ngIf="windowPage == 'new-visit'" (closeEvent)="close()"></app-new-visit>
     </div>
 </div>
