--- a/src/app/components/dashboard/content/waiting-room/new-visit/new-visit.component.html
+++ b/src/app/components/dashboard/content/waiting-room/new-visit/new-visit.component.html
@@ -58,4 +58,9 @@
             </div>
         </div>
     </div>
+    <div class="medical-file-container primary-radius">
+        <div class="content">
+            <app-new-medical-file></app-new-medical-file>
+        </div>
+    </div>
 </div>
