Antecedents submitter init

--- a/src/app/components/dashboard/content/waiting-room/new-medical-file/new-medical-file.component.html
+++ b/src/app/components/dashboard/content/waiting-room/new-medical-file/new-medical-file.component.html
@@ -117,6 +117,9 @@
                     <app-search-input [submittedItem]="medicalFile.profession" [placeholder]="'Recherché une profession'" [searchFunction]="professionSearchFunction"></app-search-input>
                 </div>
             </div>
+            <div class="col col-md-12">
+                <app-antecedents-submitter></app-antecedents-submitter>
+            </div>
         </div>
     </form>
 </div>
