--- a/src/app/components/dashboard/content/waiting-room/new-medical-file/new-medical-file.component.css
+++ b/src/app/components/dashboard/content/waiting-room/new-medical-file/new-medical-file.component.css
@@ -51,3 +51,17 @@ select.is-invalid {
 .col {
     margin-bottom: 8px;
 }
+
+.clear {
+    background: #eeeeee;
+    border-radius: 8px;
+    padding: 8px 16px;
+    width: 120px;
+    text-align: center;
+    border: none;
+    outline: none;
+}
+
+.controller .primary-button {
+    float: right;
+}
