--- a/src/app/components/dashboard/content/waiting-room/new-medical-file/antecedents-submitter/antecedents-submitter.component.html
+++ b/src/app/components/dashboard/content/waiting-room/new-medical-file/antecedents-submitter/antecedents-submitter.component.html
@@ -1,7 +1,7 @@
 <div class="main-container">
     <div class="row">
         <div class="col col-md-6">
-            <app-search-input [searchFunction]="searchFunction" (resultSelected)="addAntecedent()" [submittedItem]="submittedAntecedent" [placeholder]="'Recherché un antecdent'"></app-search-input>
+            <app-search-input [searchFunction]="searchFunction" (searchSubmitted)="addAntecedent()" [submittedItem]="submittedAntecedent" [placeholder]="'Recherché un antecdent'"></app-search-input>
         </div>
         <div class="col col-md-3">
             <select [(ngModel)]="submittedAntecedent.type">
