--- a/src/app/components/global/search-input/search-input.component.css
+++ b/src/app/components/global/search-input/search-input.component.css
@@ -17,10 +17,11 @@
 .search-result ul {
     list-style: none;
     padding: 0px;
+    margin: 0px;
 }
 
 .search-result ul li {
-    padding: 4px 8px;
+    padding: 4px 12px;
     color: #555555;
     transition-duration: 0.3s;
     cursor: pointer;
@@ -30,4 +31,12 @@
 .search-result ul li:hover {
     color: #212122;
     background: #eeeeee;
+}
+
+.right {
+    float: right;
+}
+
+.medicalFile span {
+    font-weight: bold;
 }
