--- a/src/app/components/dashboard/content/waiting-room/new-visit/mini-medical-file/mini-medical-file.component.html
+++ b/src/app/components/dashboard/content/waiting-room/new-visit/mini-medical-file/mini-medical-file.component.html
@@ -1,1 +1,18 @@
-<p>mini-medical-file works!</p>
+<div class="main-container stretch-container">
+    <div class="image-side">
+        <img src="{{(medicalFile.gender)? ('../../../../../../../../assets/male.jpg') : ('../../../../../../../../assets/female.jpg')}} ">
+    </div>
+    <div class="info-side">
+        <h5>{{medicalFile.name}} {{medicalFile.lastname}}</h5>
+        <p>
+            <i class="fa fa-calendar"></i> {{medicalFile.birthday}}
+            <span></span>
+        </p>
+        <p>
+            <i class="fa fa-envelope"></i> {{(medicalFile.email) ? (medicalFile.email) : ("Inconnue")}}
+        </p>
+        <p>
+            <i class="fa fa-phone"></i> {{(medicalFile.phone) ? (medicalFile.phone) : ("Inconnue")}}
+        </p>
+    </div>
+</div>
