--- a/src/app/components/dashboard/content/waiting-room/appointments-manager/appointments-controller/appointments-controller.component.html
+++ b/src/app/components/dashboard/content/waiting-room/appointments-manager/appointments-controller/appointments-controller.component.html
@@ -1,9 +1,9 @@
 <div class="main-container">
-    <button class="secondary-button" (click)="newVisit()">
+    <button class="secondary-button" (click)="newVisit()" [disabled]="waitingRoom == null">
         <i class="fa fa-plus"></i>
         Nouvelle visit 
     </button>
-    <button class="secondary-button right" (click)="next()">
+    <button class="secondary-button right" (click)="next()" [disabled]="waitingRoom == null"> 
         Patient Suivant <i class="fa fa-arrow-right"></i>
     </button>
 </div>
