--- a/src/app/components/dashboard/content/waiting-room/appointments-manager/appointments-manager.component.html
+++ b/src/app/components/dashboard/content/waiting-room/appointments-manager/appointments-manager.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
     <div class="header primary-radius">
-        <app-appointments-controller (nextEvent)="next()"></app-appointments-controller>
+        <app-appointments-controller (nextEvent)="next()" [waitingRoom]="waitingRoom"></app-appointments-controller>
     </div>
     <div class="body primary-radius">
         <div class="row">
