--- a/src/app/components/dashboard/content/waiting-room/appointments-manager/patients-list/visit/visit.component.html
+++ b/src/app/components/dashboard/content/waiting-room/appointments-manager/patients-list/visit/visit.component.html
@@ -1,36 +1,63 @@
-<div class="visit-container stretch-container" [class.next]="next" *ngIf="!done">
-
-    <div class="image-side">
-        <img src="{{(visit.medicalFile.gender)? ('../../../../../../../../assets/male.jpg') : ('../../../../../../../../assets/female.jpg')}} ">
-    </div>
-    <div class="info-side">
-        <h5>{{visit.medicalFile.name}} {{visit.medicalFile.lastname}}</h5>
-        <p>
-            <i class="fa fa-clock"></i> temp d'arrivé : <span>{{visit.arrivalTime}}</span>
-        </p>
-        <p>
-            <i class="fa fa-sort-amount-up"></i>l'order :
-            <span>
+<div class="visit-container" [class.next]="next" *ngIf="!done" [class.current-visit]="currentVisit">
+    <div class="stretch-container">
+        <div class="image-side">
+            <img src="{{(visit.medicalFile.gender)? ('../../../../../../../../assets/male.jpg') : ('../../../../../../../../assets/female.jpg')}} ">
+        </div>
+        <div class="info-side">
+            <h5>{{visit.medicalFile.name}} {{visit.medicalFile.lastname}}</h5>
+            <p>
+                <i class="fa fa-clock"></i> temp d'arrivé : <span class="hightlight">{{visit.arrivalTime}}</span>
+            </p>
+            <p>
+                <i class="fa fa-sort-amount-up"></i>l'order :
+                <span>
                 {{visit.order}}
             </span>
+            </p>
+            <p>
+                <i class="round"></i>
+                <span>{{visit.status}}</span>
+            </p>
+        </div>
+    </div>
+    <div class="bottom-side stretch-container">
+        <p>
+            <i class="fa fa-envelope"></i> {{(visit.medicalFile.email)? (visit.medicalFile.email) : ("Inconnue")}}
+        </p>
+        <p>
+            <i class="fa fa-phone"></i> {{(visit.medicalFile.phone)? (visit.medicalFile.phone) : ("Inconnue")}}
         </p>
     </div>
 </div>
-<div class="visit-done-container stretch-container" [class.done]="doneAnimate" *ngIf="done">
-    <div class="image-side">
-        <img src="{{(visit.medicalFile.gender)? ('../../../../../../../../assets/male.jpg') : ('../../../../../../../../assets/female.jpg')}} ">
+<div class="visit-container" [class.end-animation]="endAnimation" [class.visit-done-container]="newDone" [class.done]="doneAnimate" *ngIf="done">
+    <div class="stretch-container">
+        <div class="image-side">
+            <img src="{{(visit.medicalFile.gender)? ('../../../../../../../../assets/male.jpg') : ('../../../../../../../../assets/female.jpg')}} ">
+        </div>
+        <div class="info-side">
+            <h5>{{visit.medicalFile.name}} {{visit.medicalFile.lastname}}</h5>
+            <p>
+                <i class="fa fa-clock"></i> debut <span class="hightlight"> {{visit.startTime}}</span> - fin <span class="hightlight">   {{visit.endTime}}</span>
+            </p>
+            <p>
+                <i class="fa fa-money-bill-wave"></i>Montant a payé <span>{{totalMoney}} DA</span>
+            </p>
+            <p>
+                <i class="round"></i>
+                <span>{{visit.status}}</span>
+            </p>
+
+        </div>
     </div>
-    <div class="info-side">
-        <h5>{{visit.medicalFile.name}} {{visit.medicalFile.lastname}}</h5>
+
+    <div class="bottom-side stretch-container">
         <p>
-            <i class="fa fa-clock"></i> temp d'arrivé : <span>{{visit.arrivalTime}}</span>
+            <i class="fa fa-envelope"></i> {{(visit.medicalFile.email)? (visit.medicalFile.email) : ("Inconnue")}}
         </p>
         <p>
-            <i class="fa fa-sort-amount-up"></i>l'order :
-            <span>
-                {{visit.order}}
-            </span>
+            <i class="fa fa-phone"></i> {{(visit.medicalFile.phone)? (visit.medicalFile.phone) : ("Inconnue")}}
         </p>
     </div>
 </div>
 <div id="extra-margin" *ngIf="next"></div>
+<div id="init-margin" *ngIf="doneAnimate && !endAnimation"></div>
